# Numerical_Derivatives

./: README.org  flake.nix
cpp/: CMakeLists.txt
cpp/examples/: main.cpp
cpp/include/numerical_derivatives/: derivatives.hpp  plotting.hpp  utils.hpp
cpp/src/: derivatives.cpp  plotting.cpp  utils.cpp
py/: README.org  demo.py  project.toml
py/numerical_derivatives/: __init__.py  derivatives.py  plotting.py  utils.py
